Fixed grid gap on lesson5

--- a/lessons/lesson5/css/small.css
+++ b/lessons/lesson5/css/small.css
@@ -350,7 +350,7 @@ main {
     .contact-grid {
         display: grid;
         grid-template-columns: 1fr 1fr;
-        grid-gap: 1rem;
+        grid-gap: .8rem;
         padding-bottom: 1rem;
     }
 
